Resolved merge conflicts

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
       <li><a href="/cat-m/index">Updating prices for Cat M drugs via upload</a></li>
       <li><a href="/user-designed-query/home-page">New UDQ </a></li>
       <li><a href="/tce-2384/index">(TCE-2384) VTM ingredients in CDR</a></li>
+      <li><a href="/user-designed-query/Boss-file-concept">Boss Concept</a></li>
     </ul>
   </div>
 </div>
