--- a/templates/user-designed-query/choose-dictionary.html
+++ b/templates/user-designed-query/choose-dictionary.html
@@ -14,7 +14,7 @@
                 User defined query
               <span class="nhsuk-u-visually-hidden"> - </span>
             </span>
-    Choose dictionary
+    Edit dictionary
   </h1>
   <div class="nhsuk-form-group">
 
