--- a/templates/user-designed-query/edit-search-criteria-query.html
+++ b/templates/user-designed-query/edit-search-criteria-query.html
@@ -105,7 +105,7 @@
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Between?Starts between
+              Show all dates
             </dt>
             <dd class="nhsuk-summary-list__value">
               Between
@@ -113,7 +113,7 @@
 
             <dd class="nhsuk-summary-list__actions">
 
-              <a href="edit-search-criteria.html">
+              <a href="edit-search-criteria-dates-between.html">
                 Edit<span class="nhsuk-u-visually-hidden">Edit</span>
               </a>
 
@@ -146,7 +146,7 @@
 
             <dd class="nhsuk-summary-list__actions">
 
-              <a href="edit-search-criteria.html">
+              <a href="edit-end-date.html">
                 Edit<span class="nhsuk-u-visually-hidden">Edit</span>
               </a>
 
