--- a/templates/user-designed-query/edit-search-display-level.html
+++ b/templates/user-designed-query/edit-search-display-level.html
@@ -22,20 +22,55 @@
 
 
 
-    <div class="nhsuk-form-group">
-      <label class="nhsuk-label" for="select-name">
-        Select Level
-      </label>
-      <select class="nhsuk-select" id="select-name" name="select-1">
-        <option value=""></option>
-        <option value="VMP">VMP</option>
-        <option value="AMP">AMP</option>
-        <option value="VMPP">VMPP</option>
-        <option value="AMPP">AMPP</option>
-        <option value="Ingredient">Ingredient</option>
-        <option value="Supplier">Supplier</option>
-        <option value="VTM">VTM</option>
-      </select>
+    <div class="nhsuk-radios">
+      <div class="nhsuk-radios__item">
+        <input class="nhsuk-radios__input" id="example-inline-1" name="example-inline" type="radio" value="yes">
+        <label class="nhsuk-label nhsuk-radios__label" for="example-inline-1">
+          VMP
+        </label>
+      </div>
+
+      <div class="nhsuk-radios__item">
+        <input class="nhsuk-radios__input" id="example-inline-2" name="example-inline" type="radio" value="no">
+        <label class="nhsuk-label nhsuk-radios__label" for="example-inline-2">
+          AMP
+        </label>
+      </div>
+
+      <div class="nhsuk-radios__item">
+        <input class="nhsuk-radios__input" id="example-inline-1" name="example-inline" type="radio" value="yes">
+        <label class="nhsuk-label nhsuk-radios__label" for="example-inline-1">
+          VMPP
+        </label>
+      </div>
+
+      <div class="nhsuk-radios__item">
+        <input class="nhsuk-radios__input" id="example-inline-2" name="example-inline" type="radio" value="no">
+        <label class="nhsuk-label nhsuk-radios__label" for="example-inline-2">
+          AMPP
+        </label>
+      </div>
+
+      <div class="nhsuk-radios__item">
+        <input class="nhsuk-radios__input" id="example-inline-1" name="example-inline" type="radio" value="yes">
+        <label class="nhsuk-label nhsuk-radios__label" for="example-inline-1">
+          Ingredient
+        </label>
+      </div>
+
+      <div class="nhsuk-radios__item">
+        <input class="nhsuk-radios__input" id="example-inline-2" name="example-inline" type="radio" value="no">
+        <label class="nhsuk-label nhsuk-radios__label" for="example-inline-2">
+          Supplier
+        </label>
+      </div>
+
+      <div class="nhsuk-radios__item">
+        <input class="nhsuk-radios__input" id="example-inline-1" name="example-inline" type="radio" value="yes">
+        <label class="nhsuk-label nhsuk-radios__label" for="example-inline-1">
+          VTM
+        </label>
+      </div>
     </div>
   </fieldset>
 
