--- a/templates/user-designed-query/extra-large-data-table.html
+++ b/templates/user-designed-query/extra-large-data-table.html
@@ -4289,7 +4289,7 @@
 
     <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-5"
             data-module="nhsuk-button" type="submit" href="#">
-      Download CSV
+      Download query
     </button>
 
 
