--- a/templates/user-designed-query/new-query-summary-page.html
+++ b/templates/user-designed-query/new-query-summary-page.html
@@ -197,7 +197,7 @@
             </button>
           </td>
           <td class="nhsuk-table__cell">
-            <a href="Edit">Edit</a>
+            <a href="edit-search-display-query.html">Edit</a>
           </td>
         </tr>
 
