--- a/templates/user-designed-query/large-data-table.html
+++ b/templates/user-designed-query/large-data-table.html
@@ -833,7 +833,7 @@
   </a>
 
   <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="#">
-   Download CSV
+   Download query
   </button>
 
 
