cat m & price 8a prototype updates

--- a/templates/cat-m/error.html
+++ b/templates/cat-m/error.html
@@ -21,7 +21,7 @@
 
 
         <h1 class="nhsuk-heading-xl nhsuk-u-margin-bottom-2">Upload excel file to update VMPPs</h1>
-        <p class="nhsuk-body">Select a file from your computer to update drug tariff prices VMPPs for Part VIII category
+        <p class="nhsuk-body">Select a file from your computer to update drug tariff prices VMPPs for Part VIIIA category
           M products</p>
 
         <!-- Add your content here -->
