--- a/templates/cat-m/index.html
+++ b/templates/cat-m/index.html
@@ -2,8 +2,8 @@
 {% block content %}
 <div class="nhsuk-width-container">
 
-  <!--div class="nhsuk-back-link">
-    <a class="nhsuk-back-link__link" href="price-amend-yes-or-no.html">
+  <div class="nhsuk-back-link">
+    <a class="nhsuk-back-link__link" href="#" onclick="history.back(); return false;">
       <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
         aria-hidden="true">
         <path
@@ -11,7 +11,7 @@
         </path>
       </svg>
       Go back</a>
-  </div-->
+  </div>
 
   <main class="nhsuk-main-wrapper nhsuk-main-wrapper--s" id="maincontent" role="main">
 
@@ -21,7 +21,7 @@
 
   
           <h1 class="nhsuk-heading-xl nhsuk-u-margin-bottom-2">Upload excel file to update VMPPs</h1>
-          <p class="nhsuk-body">Select a file from your computer to update drug tariff prices VMPPs for Part VIII category M products</p>
+          <p class="nhsuk-body">Select a file from your computer to update drug tariff prices VMPPs for Part VIIIA category M products</p>
       
         <!-- Add your content here -->
         <div class="nhsuk-grid-row">
