--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
       <li><a href="/new-audit/home-page">New audit prototype </a></li>
       <li><a href="/trade-families/add-amp">Trade families </a></li>
       <li><a href="/tce-2226/index">(TCE-2226)Adding VTM ingredients to dm+d browser</a></li>
-      <li><a href="/part-8a/index">Updating prices for Part VIII A drugs</a></li>
+      <li><a href="/quick-price-update/index">Updating prices for Part VIII A drugs</a></li>
       <li><a href="/cat-m/index">Updating prices for Cat M drugs via upload</a></li>
       <li><a href="/user-designed-query/home-page">New UDQ </a></li>
       <li><a href="/tce-2384/index">(TCE-2384) VTM ingredients in CDR</a></li>
