--- a/templates/part8-index.html
+++ b/templates/part8-index.html
@@ -27,28 +27,28 @@
           <div class="nhsuk-width-container">
             <div class="nhsuk-grid-row">
               <div class="nhsuk-grid-column-one-half nhsuk-section__content">
-                <h2 class="hero-margin-fix">Part VIIIA</h2>
-                <p>Update prices for Part VIIIA</p>
+                <h2 class="hero-margin-fix">Part VIIIA Category A</h2>
+                <p>Update Part VIIIA Category A prices</p>
                 <div class="nhsuk-action-link">
-                  <a class="nhsuk-action-link__link" href="/part-8a/index" id="product-search">
+                  <a class="nhsuk-action-link__link" href="#" id="product-search">
                     <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
                       <path d="M0 0h24v24H0z" fill="none"></path>
                       <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
                     </svg>
-                    <span class="nhsuk-action-link__text">Go to Part VIIIA price update</span>
+                    <span class="nhsuk-action-link__text">Go to Price Update</span>
                   </a>
                 </div>
               </div>
               <div class="nhsuk-grid-column-one-half nhsuk-section__content">
-                <h2>Part VIIIA-Cat M price updates</h2>
-                <p>Update Part VIIIA- Cat Mprices</p>
+                <h2>Part VIIIA Category M</h2>
+                <p>Update Part VIIIA Category M prices</p>
                 <div class="nhsuk-action-link">
                   <a class="nhsuk-action-link__link" href="/cat-m/index" id="code-search">
                     <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
                       <path d="M0 0h24v24H0z" fill="none"></path>
                       <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
                     </svg>
-                    <span class="nhsuk-action-link__text">Go to Part VIII - Cat M</span>
+                    <span class="nhsuk-action-link__text">Go to Price Update</span>
                   </a>
                 </div>
               </div>
