--- a/templates/quick-price-update/confirm-changes-price-jump.html
+++ b/templates/quick-price-update/confirm-changes-price-jump.html
@@ -3,7 +3,7 @@
 <div class="nhsuk-width-container">
 
   <div class="nhsuk-back-link">
-    <a class="nhsuk-back-link__link" href="/part-8a/effective-date">
+    <a class="nhsuk-back-link__link" href="/quick-price-update/effective-date-generic">
       <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
         aria-hidden="true">
         <path
@@ -32,8 +32,8 @@
               
                 <dd class="nhsuk-summary-list__actions">
                   
-                    <a href="#">
-                        Change<span class="nhsuk-u-visually-hidden"> name</span>
+                    <a href="./effective-date.html">
+                        Change date<span class="nhsuk-u-visually-hidden"> name</span>
                         </a>
                   
                 </dd>
@@ -48,8 +48,8 @@
               
                 <dd class="nhsuk-summary-list__actions">
                   
-                    <a href="#">
-                        Change<span class="nhsuk-u-visually-hidden"> date of birth</span>
+                    <a href="./effective-date.html">
+                        Change date<span class="nhsuk-u-visually-hidden"> date of birth</span>
                         </a>
                   
                 </dd>
@@ -64,8 +64,8 @@
               
                 <dd class="nhsuk-summary-list__actions">
                   
-                    <a href="#">
-                        Change<span class="nhsuk-u-visually-hidden"> contact information</span>
+                    <a href="./effective-date.html">
+                        Change date<span class="nhsuk-u-visually-hidden"> contact information</span>
                         </a>
                   
                 </dd>
@@ -81,6 +81,18 @@
 
 
         </div>
+        
+        <div class="nhsuk-warning-callout">
+          <h3 class="nhsuk-warning-callout__label">
+            <span role="text">
+              <span class="nhsuk-u-visually-hidden">Important: </span>
+              Price difference warning
+            </span>
+          </h3>
+          <p><strong>Four</strong> products have changed by 10% or more. Review price changes</p>
+          <!--This appears whether it increases or decreses by 10% or more-->
+        </div>
+
         <div>
           <h2>Updated drug prices for Sandoz Ltd</h2>
           <div class="nhsuk-body-m flex--space-between">
@@ -135,12 +147,12 @@
                   <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>1173 
 
                 </td>
-                <td role="cell" class="nhsuk-table__cell">
+                <td role="cell" class="nhsuk-table__cell" style="background-color:#ffeb3b;">
                   <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1134  
                         
                 </td>
                 <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/part-8a/results"
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/quick-price-update/results"
                     class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
                 </td>
 
@@ -171,7 +183,66 @@
                         
                 </td>
                 <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/part-8a/results"
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/quick-price-update/results"
+                    class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
+                </td>
+
+              </tr>
+              <tr role="row" class="nhsuk-table__row">
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
+                    class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
+                    tablets</a>
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48 tablets - 2 x 24
+                  tablets
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Discontinued</span><!--svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
+                  <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b">
+                  </path>
+                </svg-->
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
+
+                </td>
+                <td role="cell" class="nhsuk-table__cell"  style="background-color:#ffeb3b;">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
+                        
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/quick-price-update/results"
+                    class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
+                </td>
+              </tr>
+              <tr role="row" class="nhsuk-table__row">
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
+                    class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
+                    tablets</a>
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48 tablets - 2 x 24
+                  tablets
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Discontinued</span><!--svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
+                  <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b">
+                  </path>
+                </svg-->
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
+
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
+                        
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/quick-price-update/results"
                     class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
                 </td>
 
@@ -201,36 +272,7 @@
                         
                 </td>
                 <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/part-8a/results"
-                    class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
-                </td>
-              </tr>
-              <tr role="row" class="nhsuk-table__row">
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                    class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                    tablets</a>
-                </td>
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48 tablets - 2 x 24
-                  tablets
-                </td>
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Discontinued</span><!--svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
-                  <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b">
-                  </path>
-                </svg-->
-                </td>
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-                </td>
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                        
-                </td>
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/part-8a/results"
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/quick-price-update/results"
                     class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
                 </td>
 
@@ -255,12 +297,12 @@
                   <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
 
                 </td>
-                <td role="cell" class="nhsuk-table__cell">
+                <td role="cell" class="nhsuk-table__cell" style="background-color:#ffeb3b;">
                   <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
                         
                 </td>
                 <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/part-8a/results"
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/quick-price-update/results"
                     class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
                 </td>
 
@@ -290,7 +332,7 @@
                         
                 </td>
                 <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/part-8a/results"
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/quick-price-update/results"
                     class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
                 </td>
 
@@ -320,7 +362,7 @@
                         
                 </td>
                 <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/part-8a/results"
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/quick-price-update/results"
                     class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
                 </td>
 
@@ -350,37 +392,7 @@
                         
                 </td>
                 <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/part-8a/results"
-                    class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
-                </td>
-
-              </tr>
-              <tr role="row" class="nhsuk-table__row">
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                    class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                    tablets</a>
-                </td>
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48 tablets - 2 x 24
-                  tablets
-                </td>
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Discontinued</span><!--svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
-                  <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b">
-                  </path>
-                </svg-->
-                </td>
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-                </td>
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                        
-                </td>
-                <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/part-8a/results"
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/quick-price-update/results"
                     class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
                 </td>
               </tr>
@@ -404,12 +416,12 @@
                   <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
 
                 </td>
-                <td role="cell" class="nhsuk-table__cell">
+                <td role="cell" class="nhsuk-table__cell"  style="background-color:#ffeb3b;">
                   <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
                         
                 </td>
                 <td role="cell" class="nhsuk-table__cell">
-                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/part-8a/results"
+                  <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="/quick-price-update/results"
                     class="nhsuk-link nhsuk-link--no-visited-state">Change price</a>
                 </td>
               </tr>
@@ -437,13 +449,10 @@
           </nav>
         </div>
 <br>
-<br>
 
 
 
-
-
-        <a class="nhsuk-button" href="/part-8a/changes-saved" role="button" draggable="false">Confirm changes</a>
+        <a class="nhsuk-button" href="/quick-price-update/changes-saved-generic" role="button" draggable="false">Confirm changes</a>
 
 
 
