--- a/templates/quick-price-update/effective-date-proprietary.html
+++ b/templates/quick-price-update/effective-date-proprietary.html
@@ -3,7 +3,7 @@
 <div class="nhsuk-width-container">
 
   <div class="nhsuk-back-link">
-    <a class="nhsuk-back-link__link" href="/part-8a/results-generic">
+    <a class="nhsuk-back-link__link" href="/quick-price-update/results-proprietary">
       <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
         aria-hidden="true">
         <path
@@ -39,15 +39,13 @@
         </div>
         <div>
           <h2>Select Reimbursement Date</h2>
-
-
           <div class="nhsuk-form-group">
             <label class="nhsuk-label" for="select-1">
-              Generic name Reimbursement Date
+              Proprietary name Reimbursement Date
             </label>
             <select class="nhsuk-select" id="select-1" name="select-1">
-              <option value="1"selected>December 2024</option>
-              <option value="2" >January 2025</option>
+              <option value="1">December 2024</option>
+              <option value="2"selected >January 2025</option>
               <option value="3" >February 2025</option>
               <option value="3" >March 2025</option>
               <option value="3" >April 2025</option>
@@ -55,12 +53,13 @@
           </div>
 
 
+
         </div>
 
 
 
 
-        <a class="nhsuk-button" href="/part-8a/confirm-changes-generic" role="button" draggable="false">Proceed</a>
+        <a class="nhsuk-button" href="/quick-price-update/confirm-changes-proprietary" role="button" draggable="false">Proceed</a>
 
        
 
