--- a/templates/quick-price-update/effective-date.html
+++ b/templates/quick-price-update/effective-date.html
@@ -3,7 +3,7 @@
 <div class="nhsuk-width-container">
 
   <div class="nhsuk-back-link">
-    <a class="nhsuk-back-link__link" href="/part-8a/results">
+    <a class="nhsuk-back-link__link" href="/quick-price-update/results">
       <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
         aria-hidden="true">
         <path
@@ -71,7 +71,7 @@
 
 
 
-        <a class="nhsuk-button" href="/part-8a/confirm-changes" role="button" draggable="false">Proceed</a>
+        <a class="nhsuk-button" href="/quick-price-update/confirm-changes" role="button" draggable="false">Proceed</a>
 
        
 
