--- a/templates/update-index.html
+++ b/templates/update-index.html
@@ -54,21 +54,21 @@
                 </div>
               </div>
             </div>
-            <!--div class="nhsuk-grid-row">
+            <div class="nhsuk-grid-row">
               <div class="nhsuk-grid-column-one-half nhsuk-section__content">
-                <h2 class="hero-margin-fix">Ingredient search</h2>
-                <p>Search for an ingredient.</p>
+                <h2 class="hero-margin-fix">Quick price updates</h2>
+                <p>Update prices by supplier</p>
                 <div class="nhsuk-action-link">
-                  <a class="nhsuk-action-link__link" href="/ingredient/search" id="ingredient-search">
+                  <a class="nhsuk-action-link__link" href="/quick-price-update" id="quick-price-update">
                     <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
                       <path d="M0 0h24v24H0z" fill="none"></path>
                       <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
                     </svg>
-                    <span class="nhsuk-action-link__text">Go to the ingredient search</span>
+                    <span class="nhsuk-action-link__text">Go to Quick price updates</span>
                   </a>
                 </div>
               </div>
-              <div class="nhsuk-grid-column-one-half nhsuk-section__content">
+              <!--div class="nhsuk-grid-column-one-half nhsuk-section__content">
                 <h2>Help page</h2>
                 <p>Find help by using the glossary or user guide.</p>
                 <div class="nhsuk-action-link">
@@ -80,9 +80,9 @@
                     <span class="nhsuk-action-link__text">Go to the help page</span>
                   </a>
                 </div>
-              </div>
+              </div-->
               
-            </div-->
+            </div>
           </div>
         </section>
   
