--- a/templates/cat-m/error.html
+++ b/templates/cat-m/error.html
@@ -39,13 +39,7 @@
               <li>Current month Drug tariff price. For example; October-24 DT</li>
             </ul>
 
-            <!--p class="nhsuk-body">Photos must not include:</p>
-            <ul class="nhsuk-list nhsuk-list--bullet">
-      <li>patients</li>
-      <li>patient data, for example, names or medical charts</li>
-      <li>visitors</li>
-      <li>staff</li>
-            </ul-->
+            <p class="nhsuk-body">If you require clarification, or support please visit the <a class="nhsuk-link nhsuk-link--no-visited-state" href="/cat-m/usage-guide.html">guidance page</a>.</p>
 
             <div class="nhsuk-form-group nhsuk-form-group--error">
               <label class="nhsuk-label" for="file-upload-1">
