--- a/templates/update-redesign/amp-update-attribute.html
+++ b/templates/update-redesign/amp-update-attribute.html
@@ -1,9 +1,14 @@
 {% extends "tce-2465/base2.html" %}
+
+
+
 {% block content %}
+
+
 <div class="nhsuk-grid-row">
     <div id="content-pane" class="nhsuk-grid-column-full">
 
-
+     
 
         <div class="nhsuk-grid-row">
 
@@ -105,18 +110,24 @@
 
             <div class="nhsuk-grid-column-three-quarters">
 
+                <div class="nhsuk-grid-column-two-thirds">
+                    <span class="nhsuk-caption-l" id="update-attributes-sub-heading">Update attributes</span>
+                    <span class="nhsuk-u-visually-hidden"> - </span>
+                    <h1 class="nhsuk-heading-xl" id="update-attributes-heading">A+E Medical Securing tape 2.5cm
+                        (Eurocare
+                        Impex Services Ltd)</h1>
+                </div>
 
-                <span class="nhsuk-caption-l" id="update-attributes-sub-heading">Update attributes</span>
-                <span class="nhsuk-u-visually-hidden"> - </span>
-                <h1 class="nhsuk-heading-xl" id="update-attributes-heading">A+E Medical Securing tape 2.5cm (Eurocare
-                    Impex Services Ltd)</h1>
 
-                    <div class="nhsuk-grid-column-full" style="float: right;">
-                        <button formaction="/update/amp?execution=e4s1"
-                        class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-top-4" role="button" id="submit"
-                        name="_eventId_submit" type="submit">Save and continue
+                <div class="nhsuk-grid-column-one-third">
+
+                    
+                    <button formaction="/update/amp?execution=e4s1"
+                        class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-top-4 nhsuk-button-float-right"
+                        role="button" id="submit" name="_eventId_submit" type="submit">
+                        Preview changes
                     </button>
-                    </div>
+                </div>
 
 
                 <form method="post" id="form">
@@ -2226,7 +2237,7 @@
 
                     <button formaction="/update/amp?execution=e4s1"
                         class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-top-4" role="button" id="submit"
-                        name="_eventId_submit" type="submit">Save and continue
+                        name="_eventId_submit" type="submit">Preview changes
                     </button>
                 </form>
             </div>
