--- a/templates/cat-m/changes-saved.html
+++ b/templates/cat-m/changes-saved.html
@@ -19,7 +19,7 @@
       <div class="nhsuk-grid-column-full">
 
         <h1>VMPPs updated successfully</h1>
-        <p>You have successfully updated prices for five hundred and sixty (560) VMPPs</p>
+        <p>You have successfully updated prices for five hundred and sixty (560) VMPPs for period <strong>October 2024</strong>.</p>
 
 
         <a class="nhsuk-button nhsuk-button--secondary" href="/update-index" role="button" draggable="false">Return to homepage</a>
