--- a/templates/cat-m/confirm-changes.html
+++ b/templates/cat-m/confirm-changes.html
@@ -3,7 +3,7 @@
 <div class="nhsuk-width-container">
 
   <div class="nhsuk-back-link">
-    <a class="nhsuk-back-link__link" href="#"  onclick="history.back(); return false;">
+    <a class="nhsuk-back-link__link" href="#" onclick="history.back(); return false;">
       <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
         aria-hidden="true">
         <path
@@ -19,12 +19,35 @@
       <div class="nhsuk-grid-column-two-thirds">
 
         <h1>Confirm changes</h1>
-        <p>You are about to update the prices for <strong>five hundred and sixty (560)</strong> VMPPs. You can proceed to submit changes or review them</p>
+        <p>You are about to update the prices for <strong>five hundred and sixty (560)</strong> VMPPs. You can proceed
+          to submit changes or review them</p>
 
+
+<h2>Drug Tariff Update Period</h2>
+        <dl class="nhsuk-summary-list">
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Previous Month 
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              September-24
+            </dd>
+          </div>
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Current Month 
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              October-24
+            </dd>
+          </div>
+
+        </dl>
 
         <a class="nhsuk-button" href="/cat-m/changes-saved" role="button" draggable="false">Confirm changes</a>
         <br>
-        <a class="nhsuk-button nhsuk-button--secondary" href="/cat-m/preview-changes" role="button" draggable="false">Review changes</a>
+        <a class="nhsuk-button nhsuk-button--secondary" href="/cat-m/preview-changes" role="button"
+          draggable="false">Review changes</a>
 
 
 
