--- a/templates/cat-m/preview-changes.html
+++ b/templates/cat-m/preview-changes.html
@@ -15,7 +15,33 @@
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
         <h1>Preview changes</h1>
+
+                <h2>Drug Tariff Update Period</h2>
+        <dl class="nhsuk-summary-list">
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Previous Month 
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              September-24
+            </dd>
+          </div>
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Current Month 
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              October-24
+            </dd>
+          </div>
+
+        </dl>
+
+        <h2>VMPPs being updated</h2>
         <p>You are about to update prices for the following VMPPs</p>
+
+
+
 
         <table role="table" class="nhsuk-table-responsive">
           <caption class="nhsuk-table__caption nhsuk-u-visually-hidden">Updated prices for products</caption>
