--- a/templates/update-redesign/amp-update-attribute.html
+++ b/templates/update-redesign/amp-update-attribute.html
@@ -8,9 +8,11 @@
 <div class="nhsuk-grid-row">
     <div id="content-pane" class="nhsuk-grid-column-full">
 
-     
+
 
         <div class="nhsuk-grid-row">
+
+
 
             <nav class="nhsuk-grid-column-one-quarter hide-mobile">
                 <h2 class="nhsuk-heading-l nhsuk-u-visually-hidden">Navigation</h2>
@@ -107,8 +109,17 @@
             </nav>
 
 
+            <div class="nhsuk-grid-column-three-quarters">
+                <button class="nhsuk-button nhsuk-button--secondary nhsuk-button-float-right" data-module="nhsuk-button"
+                    type="submit">
+                    Cancel update
+                </button>
+            </div>
+
 
             <div class="nhsuk-grid-column-three-quarters">
+
+
 
                 <div class="nhsuk-grid-column-two-thirds">
                     <span class="nhsuk-caption-l" id="update-attributes-sub-heading">Update attributes</span>
@@ -121,12 +132,14 @@
 
                 <div class="nhsuk-grid-column-one-third">
 
-                    
+
                     <button formaction="/update/amp?execution=e4s1"
                         class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-top-4 nhsuk-button-float-right"
                         role="button" id="submit" name="_eventId_submit" type="submit">
                         Preview changes
                     </button>
+
+
                 </div>
 
 
@@ -143,10 +156,24 @@
                     <!-- Attribute iteration display -->
 
                     <div class="nhsuk-grid-column-full update-box">
+                        <div class="update-general-heading">
+                            <h2 class="nhsuk-heading-l nhsuk-u-margin-bottom-1">Availability Restrictions</h2>
+                            <a href="#"
+                                class="reset-link reset-link--visited nhsuk-button-float-right "
+                                onclick="resetChanges(event)">Revert
+                                changes</a>
+
+                        </div>
                         <fieldset class="nhsuk-fieldset">
 
-                            <legend class="nhsuk-fieldset__legend--l update-general-heading"
-                                id="insertAttribute-0-legend-value">Availability Restrictions</legend>
+
+                            <!--legend class="nhsuk-fieldset__legend--l update-general-heading"
+                                id="insertAttribute-0-legend-value">Availability Restrictions
+
+
+                            </legend-->
+
+
                             <!--Current value-->
                             <div class="nhsuk-grid-column-one-half">
                                 <div class="nhsuk-u-margin-right-2">
